--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,25 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+@import url('https://fonts.googleapis.com/css2?family=Bad+Script&family=Edu+NSW+ACT+Foundation&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;1,200;1,300&display=swap');
+
+:root{
+    --primary-blue:#00d8ff;
+    --primary-purple:#6a00ff;
+}
+@layer base{
+    *{
+        @apply font-[kanit]
+    }
+    h1{
+        @apply text-3xl font-bold
+    }
+    li{
+        @apply p-4
+    }
+    button{
+        @apply bg-gradient-to-r from-[var(--primary-blue)] to-[var(--primary-purple)] px-7  py-3 rounded-3xl
+    }
 }
